Renamed 13_Containers to 13_GameMap to comply with course exercices names

--- a/13_GameMap/CMakeLists.txt
+++ b/13_GameMap/CMakeLists.txt
@@ -6,7 +6,7 @@ cmake_minimum_required (VERSION 2.6)
 ##
 ## Projet Name
 ##
-project (containers)
+project (gameMap)
 
 ##
 ## C++ Stantard compilation
