--- a/14_ImportLib/CMakeLists.txt
+++ b/14_ImportLib/CMakeLists.txt
@@ -6,7 +6,7 @@ cmake_minimum_required (VERSION 2.6)
 ##
 ## Projet Name
 ##
-project (importLib)
+project (14_ImportLib)
 
 ##
 ## C++ Stantard compilation
@@ -19,15 +19,21 @@ set(CMAKE_CXX_STANDARD 17)
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)
 
 ##
+## Flags
+##
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS_DEBUG} -g3  -W -Wall -Wextra")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -W -Wall -Wextra")
+
+##
+## Add Ncurses lib
+##
+find_package(Curses REQUIRED)
+
+##
 ## Add include directory.
 ##
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
-
-##
-## Flags
-##
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS_DEBUG} -g3 -W -Wall -Wextra")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -W -Wall -Wextra")
+include_directories(${CURSES_INCLUDE_DIR})
 
 ##
 ## Sources files
@@ -39,3 +45,4 @@ file(GLOB_RECURSE INCLUDE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp)
 ## Create binary / Link
 ##
 add_executable(${PROJECT_NAME} ${SOURCE_FILES} ${INCLUDE_FILES})
+target_link_libraries(${PROJECT_NAME} ${CURSES_LIBRARIES})
